# zephyr

arch/: Kconfig
arch/powerpc/: CMakeLists.txt  Kconfig
arch/powerpc/core/: CMakeLists.txt  cpu_idle.c  fatal.c  irq_manage.c  prep_c.c  reset.S  switch.S  thread.c  vector.S
arch/powerpc/core/offsets/: offsets.c
arch/powerpc/include/: kernel_arch_data.h  kernel_arch_func.h  kernel_arch_thread.h  offsets_short_arch.h
boards/powerpc/microwatt/: Kconfig.board  Kconfig.defconfig  board.cmake  microwatt.dts  microwatt.yaml  microwatt_defconfig
boards/powerpc/microwatt/doc/: index.rst
drivers/timer/: CMakeLists.txt  Kconfig  powerpc_timebase.c
dts/bindings/serial/: microwatt,uart0.yaml
include/arch/: cpu.h
include/arch/powerpc/: arch.h  exp.h
include/linker/: linker-tool-gcc.h
include/toolchain/: common.h  gcc.h
kernel/: Kconfig
lib/libc/minimal/include/sys/: types.h
soc/powerpc/: CMakeLists.txt  linker.ld
soc/powerpc/microwatt/: Kconfig.soc
subsys/logging/: log_core.c
subsys/testsuite/include/: test_asm_inline_gcc.h
